added copyright field and designed it

--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
         <img src="dice-5.png" alt="Dice 2" class="dice" id="dice2">
 
     </div>
+    <div class="copyright">
+        <p class="copyright-text">
+            This game was built by <a href="https://www.linkedin.com/in/wjulia91/" class="copyright-text-link">Julia
+                Wilhelm</a> for Jonas Schmedtmann's
+            online course <a href="https://www.udemy.com/share/101WfeB0cbc1xbTHw=/" class="copyright-text-link">The
+                Complete
+                JavaScript Course 2020:
+                Build Real Projects!</a>. Copyright © by Jonas Schmedtmann. </p>
+    </div>
 
     <script src="app.js"></script>
 </body>
